[metadata]
name = huunq
version = 0.0.1
description = huunq: Experimental DBAPI2 Interface for kdb+ in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3ok/huunq
author = Reda Bouaida
author_email = reda.bouaida@outlook.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pykx>=2.0.0
    sqlparams>=6.0.0
    typing-extensions>=4.6.0;python_version < "3.10"
python_requires = >=3.8.1

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
plugins = covdefaults

[bdist_wheel]
universal = True

[mypy]
strict = True

[flake8]
ignore = E203
